# ws_server

./: .clang-format  .editorconfig  .gitignore  .nvimrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GITHUB_ACTIONS_SUMMARY.md  LICENSE  README.md  SECURITY.md  http_server.code-workspace  load_test.sh  setup_github_actions.sh  validate_ci.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: README.md  ci.yml  code-quality.yml  memory-tests.yml  release.yml  stress-tests.yml
benchmarks/: CMakeLists.txt
benchmarks/response/: CMakeLists.txt  main.c++
benchmarks/router/: CMakeLists.txt  main.c++
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.c++  options.h++
examples/frontend/public/: 405.html  faq.html
examples/frontend/public/blog/: entry.html  list.html
examples/http_server/: CMakeLists.txt  main.c++  server.c++  server.h++
examples/logging_demo/: CMakeLists.txt  Readme.md  main.c++
examples/mvc/: CMakeLists.txt  Readme.md
examples/mvc/backend/: main.c++  server.c++  server.h++
examples/mvc/backend/Controllers/: Blog.h++  Default.h++
examples/mvc/backend/Models/: Blog.h++
examples/mvc/frontend/: .env.development.local  .env.prod  .eslintrc.json  .prettierrc.json  .stylelintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/mvc/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
examples/mvc/frontend/src/components/MainMenu/: index.tsx
examples/mvc/frontend/src/layouts/Base/: index.tsx
examples/mvc/frontend/src/pages/Blog/Article/: index.tsx
examples/mvc/frontend/src/pages/Blog/List/: index.tsx
examples/mvc/frontend/src/pages/Home/: index.tsx
examples/mvc/frontend/src/types/: app.d.ts  blog.d.ts
examples/public/: 404.html  about.html  faq.html  index.html  post.html
examples/public/css/: index.css
examples/public/js/: common.js
libs/args/: CMakeLists.txt
libs/args/public/args/: parser.h++
libs/args/src/: parser.c++
libs/args/tests/: CMakeLists.txt  main.c++
src/: CMakeLists.txt  main.c++
src/http/: message_interface.h++  middleware_interface.h++  mime.h++  options.h++  options_interface.h++  parser.c++  parser.h++  request.h++  response.c++  response.h++  response_interface.h++  router.c++  router.h++  server.c++  server.h++  stream.c++  stream.h++  stream_interface.h++  uri.c++  uri.h++
src/http/middlewares/: response.c++  response.h++
src/io/epoll/: epoll.c++  epoll.h++  events.h++
src/io/sockets/: inet_socket.c++  inet_socket.h++  local_socket.c++  local_socket.h++  socket.h++
src/layers/: TcpAbstract.c++  TcpAbstract.h++  tcp.c++  tcp.h++
src/server/: Client.c++  Client.h++  Connection.c++  Connection.h++  Server.c++  Server.h++  ServerAbstract.h++  TcpServer.c++  TcpServer.h++  simple_server.c++  simple_server.h++
src/stl/string/: ws_string.h++
src/utils/: logger.c++  logger.h++  thread_pool.c++  thread_pool.h++
tests/: CMakeLists.txt  TcpTest.h++  main.c++  testSuite.h
tests/http/: http_parser_test.h++  http_request_test.h++  http_uri_test.h++  response_test.h++  router_test.h++  stream_test.h++
tests/io/: epoll_test.h++  inet_soc_test.h++  local_soc_test.h++  socket_test.h++
tests/stl/string/: ws_string_test.h++
